[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-mca"
version = "0.1.0"
description = "Standalone MCA package adapted from MaxHalford/prince."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex adaptation of Max Halford's prince MCA implementation" }
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "scikit-learn>=1.2"
]

[tool.setuptools]
packages = ["custom_mca"]
